2014-09-04  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserEditor.cpp: 

2014-09-03  Holger Seelig  <holger.seelig@yahoo.de>

	* style.css:
	* BrowserWindow.xml: 

2014-09-03  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserWidget.cpp:
	* CheckButton.x3dv: 

2014-09-03  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.cpp:
	* BrowserWindow.xml:
	* X3DBrowserWidget.cpp:
	* PrototypeInstanceDialog.xml:
	* PrototypeInstanceDialog.xml:
	* X3DPrototypeInstanceDialogInterface.h: 

2014-09-03  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.cpp:
	* X3DBrowserWidget.h:
	* X3DBrowserWidget.cpp:
	* BrowserSelection.cpp:
	* HistoryView.cpp: 

2014-09-03  Holger Seelig  <holger.seelig@yahoo.de>

	* titania:
	* Makefile.am:
	* main.cpp:
	* UndoHistory.h:
	* style.css:
	* DialogFactory.h:
	* MagicImport.h:
	* X3DEditorObject.h:
	* BrowserWindow.h:
	* X3DBaseInterface.h:
	* Cairo.h:
	* MagicImport.cpp:
	* X3DUserInterface.h:
	* X3DEditorObject.cpp:
	* X3DUserInterface.cpp:
	* X3DBaseInterface.cpp:
	* X3DEditorInterface.h:
	* BrowserWindow.cpp:
	* BrowserUserData.h:
	* Console.h:
	* X3DBrowserWindow.h:
	* BrowserWindow.xml:
	* BrowserSelection.h:
	* X3DBrowserWidget.h:
	* X3DBrowserEditor.h:
	* BrowserWidget.x3dv:
	* Console.cpp:
	* NameEntry.h:
	* X3DDialogInterface.cpp:
	* BrowserSelection.cpp:
	* X3DBrowserEditor.cpp:
	* NormalTool.h:
	* X3DBrowserWidget.cpp:
	* X3DBrowserWindow.cpp:
	* NodeIndex.h:
	* LODEditor.h:
	* LODEditor.xml:
	* RotationTool.h:
	* LODEditor.xml:
	* TextEditor.xml:
	* NodeIndex.cpp:
	* SFStringEntry.h:
	* SFColorButton.h:
	* LODEditor.cpp:
	* TextEditor.xml:
	* TextEditor.h:
	* NormalTool.x3dv:
	* LightEditor.xml:
	* LightEditor.xml:
	* NormalTool.x3dv:
	* HistoryView.h:
	* LibraryView.h:
	* InlineEditor.xml:
	* TextEditor.cpp:
	* LightEditor.h:
	* InlineEditor.xml:
	* TextureEditor.xml:
	* TextureEditor.xml:
	* RotationTool.x3dv:
	* X3DLODEditor.cpp:
	* LODRangeWidget.h:
	* RotationTool.x3dv:
	* SFStringTextView.h: