@@ -1,5 +1,9 @@
 2014-09-04  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* FileSaveWarningDialog.xml: 
+
+2014-09-04  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* X3DBrowserEditor.cpp: 
 
 2014-09-03  Holger Seelig  <holger.seelig@yahoo.de>
